force-app/main/default/objects/ICS_Application__c/ICS_Application__c.object-meta.xml
<CustomObject>
    <description>This links to a quick quote and provides the data related to credit request</description>
    <label>ICS Application Request</label>
    <nameField>
        <displayFormat>ICS-{00000000}</displayFormat>
        <label>ICS Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>