force-app/main/default/objects/ICS_Application__c/fields/Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Address_Line__c</fullName>
    <label>Address Line</label>
    <type>TextArea</type>
</CustomField>