force-app/main/default/objects/ICS_Application__c/fields/App_Scoring_Link__c.field-meta.xml
<CustomField>
    <fullName>App_Scoring_Link__c</fullName>
    <label>App &amp; Scoring Link</label>
    <type>Url</type>
</CustomField>