force-app/main/default/objects/ICS_Application__c/fields/Applied_EAD_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Applied_EAD_Treatment__c</fullName>
    <label>Applied EAD Treatment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>