force-app/main/default/objects/ICS_Application__c/fields/Cherry_Picking_Flag__c.field-meta.xml
<CustomField>
    <fullName>Cherry_Picking_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cherry Picking Flag</label>
    <type>Checkbox</type>
</CustomField>