force-app/main/default/objects/ICS_Application__c/fields/Commitment_Link__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Link__c</fullName>
    <label>Commitment Link</label>
    <type>Url</type>
</CustomField>