force-app/main/default/objects/ICS_Application__c/fields/CRE_Status__c.field-meta.xml
<CustomField>
    <fullName>CRE_Status__c</fullName>
    <label>CRE Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>