force-app/main/default/objects/ICS_Application__c/fields/Credit_Wait__c.field-meta.xml
<CustomField>
    <fullName>Credit_Wait__c</fullName>
    <label>Credit Wait</label>
    <type>DateTime</type>
</CustomField>