force-app/main/default/objects/ICS_Application__c/fields/Currently_In_Default__c.field-meta.xml
<CustomField>
    <fullName>Currently_In_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently In Default</label>
    <type>Checkbox</type>
</CustomField>