force-app/main/default/objects/ICS_Application__c/fields/Default_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Date__c</fullName>
    <label>Default Date</label>
    <type>Date</type>
</CustomField>