force-app/main/default/objects/ICS_Application__c/fields/Exposure_Class__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Class__c</fullName>
    <label>Exposure Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>