force-app/main/default/objects/ICS_Application__c/fields/Financed_Amount_EUR__c.field-meta.xml
<CustomField>
    <fullName>Financed_Amount_EUR__c</fullName>
    <label>Financed Amount (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>