force-app/main/default/objects/ICS_Application__c/fields/Initial_Default_Reason__c.field-meta.xml
<CustomField>
    <fullName>Initial_Default_Reason__c</fullName>
    <label>Initial Default Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>