force-app/main/default/objects/ICS_Application__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC?</label>
    <type>Checkbox</type>
</CustomField>