force-app/main/default/objects/ICS_Application__c/fields/KYC_Code__c.field-meta.xml
<CustomField>
    <fullName>KYC_Code__c</fullName>
    <label>KYC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>