force-app/main/default/objects/ICS_Application__c/fields/KYC_Reason__c.field-meta.xml
<CustomField>
    <fullName>KYC_Reason__c</fullName>
    <label>KYC Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC Pass - Identity Valid No risk</fullName>
            </value>
            <value>
                <fullName>KYC Pass - Identity via Other, Risk OK</fullName>
            </value>
            <value>
                <fullName>KYC Pass - Risk erroneous or na</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>