force-app/main/default/objects/ICS_Application__c/fields/KYC_Source__c.field-meta.xml
<CustomField>
    <fullName>KYC_Source__c</fullName>
    <label>KYC Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Documents</fullName>
            </value>
            <value>
                <fullName>Consumer Credit Report</fullName>
            </value>
            <value>
                <fullName>D&amp;B</fullName>
            </value>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>Equifax Business</fullName>
            </value>
            <value>
                <fullName>Experian Business</fullName>
            </value>
            <value>
                <fullName>IRS Documents</fullName>
            </value>
            <value>
                <fullName>Lexis Nexis</fullName>
            </value>
            <value>
                <fullName>Medical License</fullName>
            </value>
            <value>
                <fullName>Paynet</fullName>
            </value>
            <value>
                <fullName>SOS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>