force-app/main/default/objects/ICS_Application__c/fields/Legal_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Id__c</fullName>
    <label>Legal Entity Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>