force-app/main/default/objects/ICS_Application__c/fields/Master_Scale_Rating__c.field-meta.xml
<CustomField>
    <fullName>Master_Scale_Rating__c</fullName>
    <label>Master Scale Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>