force-app/main/default/objects/ICS_Application__c/fields/PD_Lookup_Type__c.field-meta.xml
<CustomField>
    <fullName>PD_Lookup_Type__c</fullName>
    <label>PD Lookup Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>