force-app/main/default/objects/ICS_Application__c/fields/PD_Penalty_Flag__c.field-meta.xml
<CustomField>
    <fullName>PD_Penalty_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PD Penalty Flag</label>
    <type>Checkbox</type>
</CustomField>