force-app/main/default/objects/ICS_Application__c/fields/PD_Percent__c.field-meta.xml
<CustomField>
    <fullName>PD_Percent__c</fullName>
    <label>PD Percent</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>