force-app/main/default/objects/ICS_Application__c/fields/PD_Rating_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating_Date__c</fullName>
    <label>PD Rating Date</label>
    <type>Date</type>
</CustomField>