force-app/main/default/objects/ICS_Application__c/fields/PD_Rating_Model__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating_Model__c</fullName>
    <label>PD Rating Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>