force-app/main/default/objects/ICS_Application__c/fields/PD_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating_Score__c</fullName>
    <label>PD Rating Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>