force-app/main/default/objects/ICS_Application__c/fields/PD_Required_Treatment__c.field-meta.xml
<CustomField>
    <fullName>PD_Required_Treatment__c</fullName>
    <label>PD Required Treatment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>