force-app/main/default/objects/ICS_Application__c/fields/PD_Treatment_Exposure_Amount_EUR__c.field-meta.xml
<CustomField>
    <fullName>PD_Treatment_Exposure_Amount_EUR__c</fullName>
    <label>PD Treatment Exposure Amount (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>