force-app/main/default/objects/ICS_Application__c/fields/PD_Vintage__c.field-meta.xml
<CustomField>
    <fullName>PD_Vintage__c</fullName>
    <label>PD Vintage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>