force-app/main/default/objects/ICS_Application__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>