force-app/main/default/objects/ICS_Application__c/fields/Quick_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote_Name__c</fullName>
    <formula>Quick_Quote__r.genesis__Business_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Quote Name</label>
    <type>Text</type>
</CustomField>