force-app/main/default/objects/ICS_Application__c/fields/Quick_Quote_Phone__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote_Phone__c</fullName>
    <formula>Quick_Quote__r.Primary_Phone_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Quote Phone</label>
    <type>Text</type>
</CustomField>