force-app/main/default/objects/ICS_Application__c/fields/Quote_Adddress_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Adddress_Line__c</fullName>
    <formula>Quick_Quote__r.genesis__Address_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Adddress Line</label>
    <type>Text</type>
</CustomField>