force-app/main/default/objects/ICS_Application__c/fields/Quote_City__c.field-meta.xml
<CustomField>
    <fullName>Quote_City__c</fullName>
    <formula>Quick_Quote__r.genesis__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote City</label>
    <type>Text</type>
</CustomField>