force-app/main/default/objects/ICS_Application__c/fields/Quote_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Quote_Country_Code__c</fullName>
    <formula>Quick_Quote__r.genesis__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Country Code</label>
    <type>Text</type>
</CustomField>