force-app/main/default/objects/ICS_Application__c/fields/Quote_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Quote_Postal_Code__c</fullName>
    <formula>Quick_Quote__r.genesis__Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Postal Code</label>
    <type>Text</type>
</CustomField>