force-app/main/default/objects/ICS_Application__c/fields/Quote_State_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>Quote_State_Province_Code__c</fullName>
    <formula>Quick_Quote__r.genesis__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote State Province Code</label>
    <type>Text</type>
</CustomField>