force-app/main/default/objects/ICS_Application__c/fields/Rabobank_Masterscale_Rating__c.field-meta.xml
<CustomField>
    <fullName>Rabobank_Masterscale_Rating__c</fullName>
    <label>Rabobank Masterscale Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>