force-app/main/default/objects/ICS_Application__c/fields/Risk_Grade_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade_Rating__c</fullName>
    <label>Risk Grade Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>