force-app/main/default/objects/ICS_Application__c/fields/Score_Decision__c.field-meta.xml
<CustomField>
    <fullName>Score_Decision__c</fullName>
    <label>Score Decision</label>
    <length>20</length>
    <type>Text</type>
</CustomField>