force-app/main/default/objects/ICS_Application__c/fields/State_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Code__c</fullName>
    <label>State Province Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>