force-app/main/default/objects/ICS_Application__c/fields/System_Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>System_Approval_Limit__c</fullName>
    <label>System Approval Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>