force-app/main/default/objects/ICS_Application__c/fields/System_Decision__c.field-meta.xml
<CustomField>
    <fullName>System_Decision__c</fullName>
    <label>System Decision</label>
    <length>20</length>
    <type>Text</type>
</CustomField>