force-app/main/default/objects/ICS_Application__c/recordTypes/List_Of_Similars.recordType-meta.xml
<RecordType>
    <fullName>List_Of_Similars</fullName>
    <active>true</active>
    <label>List Of Similars</label>
</RecordType>