force-app/main/default/objects/ICS_Application__c/listViews/Credit_ICS_Application.listView-meta.xml
<ListView>
    <fullName>Credit_ICS_Application</fullName>
    <columns>NAME</columns>
    <columns>Quick_Quote__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>Credit Queue</label>
    <queue>Credit</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>