force-app/main/default/objects/ICS_Application__c/listViews/My_Credit.listView-meta.xml
<ListView>
    <fullName>My_Credit</fullName>
    <columns>NAME</columns>
    <columns>Quick_Quote__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Credit</label>
</ListView>