force-app/main/default/objects/ICS_Application__c/listViews/Past_Credit_ICS_Application.listView-meta.xml
<ListView>
    <fullName>Past_Credit_ICS_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Past Credit</label>
    <queue>Past_Credit</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>