force-app/main/default/objects/ICS_Application__c/listViews/Waiting_for_Credit_ICS_Application.listView-meta.xml
<ListView>
    <fullName>Waiting_for_Credit_ICS_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Waiting for Credit</label>
    <queue>Waiting_for_Credit</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>